testdata/asm/invalid/div_07.zkasm
;;error:3:9-10:unknown register
fn div(x u16, y u16) -> (q u16, r u16) {
  q, r, w = x / y
  return
}
